--- a/fauna-sdk.yml
+++ b/fauna-sdk.yml
@@ -2,7 +2,7 @@ overwrite: true
 schema:
   - https://graphql.fauna.com/graphql:
       headers:
-        Authorization: "Bearer fnAD5vHRYDACB463FFowqfjHBZeYou9P10HhRwi5"
+        Authorization: "Bearer <key-secret>"
 documents: "./**/*.graphql"
 generates:
   ./generated/sdk.ts:
